--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./grid.css" />
   </head>
   <body>
+    <div class="grid">
+      <p style="grid-column: 2 / -1;">Bum bummelum</p>
+    </div>
     <script type="module">
       import GridOverlay from "./grid-overlay.js";
       const overlay = new GridOverlay();
